fixed selection color not working on chrome, properly added font faces

--- a/pages/index.html
+++ b/pages/index.html
@@ -21,6 +21,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="Vidhu Kant Sharma's personal home page" />
+  <link type="text/css" rel="stylesheet" href="/css/font-faces.css">
   <link type="text/css" rel="stylesheet" href="/css/styles.css">
   <link type="text/css" rel="stylesheet" href="/css/index.css">
   <title>
@@ -118,46 +119,5 @@
       </div>
     </div>
   </div>
-
-  <div class="full-container" id="fc-2">
-    <div id="intro-parent">
-      <div>
-        <h1>Yo doodz I am pro hacker Vidhu Kant</h1>
-        <p>Yo. I'm Vidhu Kant. I'm a hobbyist web developer, and the self proclaimed CEO of Weeb Developerz.</p>
-        <p>I sometimes make YouTube videos, though I haven't settled down on a theme yet.. My channel is called <a href="https://www.youtube.com/channel/UClA8PwtqRvBVkLI8xrdumxQ">MikunoNaka</a></p>
-        <p>Web development somehow has become my main thing but really I just code whatever I like</p>
-        <!--p>I'm extremely efficient at picking up side projects, writing spaghetti code, and dropping the project after getting frustrated..</p-->
-      </div>
-      <!--div>
-        <h1>My Projects</h1>
-        <p>Some of my projects lie at <a href="https://weeb-developerz.xyz">weeb-developerz.xyz</a> (might not work rn) and my <a href="https://github.com/MikunoNaka">GitHub</a>.</p>
-        <p>I love learning new languages and frameworks by creating small programs, you can check out my <a>Projects</a> which sort of acts like both a to-do list and a "dev blog" for the things I'm working on or planning to work on.</p>
-        <p>Also check out "Project MACLI" which is a <em>group of projects</em> including a MyAnimeList API wrapper for GoLang (MAL2Go), an unofficial CLI-based MyAnimeList client (macli / coming soon) and a YouTube series tutorial for MAL2Go</p>
-      </div-->
-      <div>
-        <h1>About Me</h1>
-        <p>I like free (as in freedom) software, functional programming, customizing stuff and all the weeaboo garbage Japan can offer (instead of gacha games never get those)</p>
-        <p>My "Company" Weeb Developerz was coined because I'm a weeb and a web developer so Weeb Developerz, the most hipster developer group.. though the only member seems to be me</p>
-        <p>Apart from programming, I pick up new interests way too quickly and drop them at the same speed, but there's still a long list of my hobbies that stick around. I hope I'd be able to talk about all of them on this website.</p>
-        <h1>NOTICE: only this page on this website works and it is under active development.</h1>
-      </div>
-    </div>
-
-    <div id="image-links-container">
-      <img src="/pictures/vidhukant.jpg">
-      <ul class="links">
-        <a href="https://github.com/MikunoNaka">
-          <li>GitHub</li>
-        </a>
-        <a href="https://www.youtube.com/channel/UClA8PwtqRvBVkLI8xrdumxQ">
-          <li>YouTube</li>
-        </a>
-        <a href="mailto:vidhukant@protonmail.ch">
-          <li>Email Me</li>
-        </a>
-      </ul>
-    </div>
-  </div>
-  <footer></footer>
 </body>
 </html>
