--- a/www/pages/index.html
+++ b/www/pages/index.html
@@ -33,6 +33,7 @@
   <div class="section" id="intro-section">
     <div id="intro-parent">
       <div>
+        <!--h1 id="blog"><a href="http://blog.vidhukant.xyz/posts/6">Click here if you cant read my blog</a></h1-->
         <h1>Yo doodz I am pro hacker Vidhu Kant</h1>
         <p>Yo. I'm Vidhu Kant. I'm a hobbyist web developer, and the self proclaimed CEO of Weeb Developerz.</p>
         <p>I sometimes make YouTube videos, though I haven't settled down on a theme yet.. My channel is called <a href="https://www.youtube.com/channel/UClA8PwtqRvBVkLI8xrdumxQ">MikunoNaka</a></p>
@@ -50,21 +51,27 @@
         <p>I like free (as in freedom) software, functional programming, customizing stuff and all the weeaboo garbage Japan can offer (instead of gacha games never get those)</p>
         <p>My "Company" Weeb Developerz was coined because I'm a weeb and a web developer so Weeb Developerz, the most hipster developer group.. though the only member seems to be me</p>
         <p>Apart from programming, I pick up new interests way too quickly and drop them at the same speed, but there's still a long list of my hobbies that stick around. I hope I'd be able to talk about all of them on this website.</p>
+        <p>Visit my personal blog at <a href="https://blog.vidhukant.xyz">blog.vidhukant.xyz</a>!! I'm <em>writing my blog</em> so it's still under development, but still stable enough for you to read it!</p>
       </div>
     </div>
 
     <div id="image-links-container">
       <img src="/pictures/vidhukant.jpg">
       <ul class="links">
+        <a href="https://blog.vidhukant.xyz">
+          <li>Blog</li>
+        </a>
         <a href="https://github.com/MikunoNaka">
           <li>GitHub</li>
         </a>
         <a href="https://www.youtube.com/channel/UClA8PwtqRvBVkLI8xrdumxQ">
           <li>YouTube</li>
         </a>
+        <!--
         <a href="mailto:vidhukant@protonmail.ch">
           <li>Email Me</li>
         </a>
+        -->
       </ul>
     </div>
   </div>
