moved public to /public

--- a/html/index.html
+++ b/html/index.html
@@ -1,29 +1,12 @@
-<!--
-  vidhukant.xyz: Vidhu Kant's Personal Website
-  Copyright (C) 2022  Vidhu Kant Sharma <vidhukant@protonmail.ch>
-
-  This program is free software: you can redistribute it and/or modify
-  it under the terms of the GNU General Public License as published by
-  the Free Software Foundation, either version 3 of the License, or
-  (at your option) any later version.
-
-  This program is distributed in the hope that it will be useful,
-  but WITHOUT ANY WARRANTY; without even the implied warranty of
-  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  GNU General Public License for more details.
-
-  You should have received a copy of the GNU General Public License
-  along with this program.  If not, see <https://www.gnu.org/licenses/>.
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="Vidhu Kant Sharma's personal home page" />
-  <link type="text/css" rel="stylesheet" href="/css/font-faces.css">
-  <link type="text/css" rel="stylesheet" href="/css/styles.css">
-  <link type="text/css" rel="stylesheet" href="/css/index.css">
+  <link type="text/css" rel="stylesheet" href="/public/css/font-faces.css">
+  <link type="text/css" rel="stylesheet" href="/public/css/styles.css">
+  <link type="text/css" rel="stylesheet" href="/public/css/index.css">
   <title>
     VidhuKant's Homepage
   </title>
@@ -56,7 +39,7 @@
     </div>
 
     <div id="image-links-container">
-      <img src="/pictures/vidhukant.jpg">
+      <img src="/public/pictures/vidhukant.jpg">
       <ul class="links">
         <a href="https://blog.vidhukant.xyz">
           <li>Blog</li>
