added /projects page

--- a/html/index.html
+++ b/html/index.html
@@ -70,7 +70,7 @@
       <a href="">
         <li>Contact</li>
       </a>
-      <a href="">
+      <a href="/html/link-tree.html">
         <li>Link-Tree</li>
       </a>
     </ul>
