changed link color

--- a/src/projects/macli/index.html
+++ b/src/projects/macli/index.html
@@ -33,7 +33,7 @@
       <p>
         Before running macli, you need to generate a MyAnimeList Client ID. Go to <a href="https://myanimelist.net/apiconfig">this page</a>
         and generate a new Client ID. You can set the name, homepage, etc to whatever you want (there really is no need to fill up the whole form for personal use)
-        but you must set the "App Redirect Url" to "http://localhost:8000" (without the quotes) to be able to successfully login with macli.
+        but you must set the "App Redirect Url" to "<code>http://localhost:8000</code>" (without the quotes) to be able to successfully login with macli.
       </p>
     </li>
     <li>
