styled /projects properly

--- a/src/projects/macli/index.html
+++ b/src/projects/macli/index.html
@@ -24,7 +24,7 @@
   <ol>
     <li>
       <p>
-        If you have Go installed on your system, simply run <code>go install github.com/MikunoNaka/macli@latest</code>
+        If you have Go installed on your system, simply run <code class="softblock">go install github.com/MikunoNaka/macli@latest</code>
         to pull all the dependencies and build the app. This has been tested on Windows and Linux.<br/>
         An AUR package is also available as <code>macli-git</code>.
       </p>
