styled index.html 'mobile-first'

--- a/src/index.html
+++ b/src/index.html
@@ -13,70 +13,63 @@
 </head>
 <body>
 
-  <div class="section" id="intro-section">
-    <div id="intro-parent">
-      <div>
-        <!--h1 id="blog"><a href="http://blog.vidhukant.xyz/posts/6">Click here if you cant read my blog</a></h1-->
-        <h1>Yo doodz I am pro hacker Vidhu Kant</h1>
-        <p>Yo. I'm Vidhu Kant. I'm a hobbyist web developer, and the self proclaimed CEO of Weeb Developerz.</p>
-        <p>I sometimes make YouTube videos, though I haven't settled down on a theme yet.. My channel is called <a href="https://www.youtube.com/channel/UClA8PwtqRvBVkLI8xrdumxQ">MikunoNaka</a></p>
-        <p>Web development somehow has become my main thing but really I just code whatever I like</p>
-        <!--p>I'm extremely efficient at picking up side projects, writing spaghetti code, and dropping the project after getting frustrated..</p-->
+  <div class="section" id="section-1">
+    <div class="section-child">
+      <div id="image-and-links">
+        <img id="my-image" src="/public/pictures/vidhukant.jpg">
+        <ul id="my-links">
+          <a href="https://blog.vidhukant.xyz">
+            <li>Blog</li>
+          </a>
+          <a href="https://github.com/MikunoNaka">
+            <li>GitHub</li>
+          </a>
+          <a href="https://www.youtube.com/channel/UClA8PwtqRvBVkLI8xrdumxQ">
+            <li>YouTube</li>
+          </a>
+          <a href="mailto:vidhukant@vidhukant.xyz">
+            <li>Email Me</li>
+          </a>
+        </ul>
       </div>
-      <!--div>
-        <h1>My Projects</h1>
-        <p>Some of my projects lie at <a href="https://weeb-developerz.xyz">weeb-developerz.xyz</a> (might not work rn) and my <a href="https://github.com/MikunoNaka">GitHub</a>.</p>
-        <p>I love learning new languages and frameworks by creating small programs, you can check out my <a>Projects</a> which sort of acts like both a to-do list and a "dev blog" for the things I'm working on or planning to work on.</p>
-        <p>Also check out "Project MACLI" which is a <em>group of projects</em> including a MyAnimeList API wrapper for GoLang (MAL2Go), an unofficial CLI-based MyAnimeList client (macli / coming soon) and a YouTube series tutorial for MAL2Go</p>
-      </div-->
-      <div>
-        <h1>About Me</h1>
-        <p>I like free (as in freedom) software, functional programming, customizing stuff and all the weeaboo garbage Japan can offer (instead of gacha games never get those)</p>
-        <p>My "Company" Weeb Developerz was coined because I'm a weeb and a web developer so Weeb Developerz, the most hipster developer group.. though the only member seems to be me</p>
-        <p>Apart from programming, I pick up new interests way too quickly and drop them at the same speed, but there's still a long list of my hobbies that stick around. I hope I'd be able to talk about all of them on this website.</p>
-        <p>Visit my personal blog at <a href="https://blog.vidhukant.xyz">blog.vidhukant.xyz</a>!! I'm <em>writing my blog</em> so it's still under development, but still stable enough for you to read it!</p>
-      </div>
-    </div>
 
-    <div id="image-links-container">
-      <img src="/public/pictures/vidhukant.jpg">
-      <ul class="links">
-        <a href="https://blog.vidhukant.xyz">
-          <li>Blog</li>
-        </a>
-        <a href="https://github.com/MikunoNaka">
-          <li>GitHub</li>
-        </a>
-        <a href="https://www.youtube.com/channel/UClA8PwtqRvBVkLI8xrdumxQ">
-          <li>YouTube</li>
-        </a>
-        <!--
-        <a href="mailto:vidhukant@protonmail.ch">
-          <li>Email Me</li>
-        </a>
-        -->
-      </ul>
+      <div id="my-intro">
+        <div>
+          <h1>Yo doodz I am pro hacker Vidhu Kant</h1>
+          <p>
+            Yo. I'm Vidhu Kant. I'm a hobbyist web developer, and the self proclaimed CEO of Weeb Developerz.<br/>
+
+            I sometimes make YouTube videos, though I haven't settled down on a theme yet..
+            My channel is called <a href="https://www.youtube.com/channel/UClA8PwtqRvBVkLI8xrdumxQ">MikunoNaka</a><br/>
+
+            Web development somehow has become my main thing but really I just code whatever I like.<br/>
+
+            I'm extremely efficient at picking up side projects, writing spaghetti code, and dropping
+            the project after getting frustrated..
+          </p>
+        </div>
+        <div>
+          <h1>About Me</h1>
+          <p>
+            I like free (as in freedom) software, functional programming, customizing stuff and all
+            the weeaboo garbage Japan can offer (instead of gacha games never get those)<br/>
+
+            My "Company" Weeb Developerz was coined because I'm a weeb and a web developer so Weeb Developerz,
+            the most hipster developer group.. though the only member seems to be me<br/>
+
+            Apart from programming, I pick up new interests way too quickly and drop them at the same speed, but there's
+            still a long list of my hobbies that stick around. I hope I'd be able to talk about all of them on this website.<br/>
+
+            Visit my personal blog at <a href="https://blog.vidhukant.xyz">blog.vidhukant.xyz</a>!!
+            I'm <em>writing my blog</em> so it's still under development, but still stable enough for you to read it!
+          </p>
+        </div>
+      </div>
+
     </div>
   </div>
 
-  <nav id="navbar">
-    <ul class="links">
-      <a href="">
-        <li>Home</li>
-      </a>
-      <a href="">
-        <li>Projects</li>
-      </a>
-      <a href="">
-        <li>Contact</li>
-      </a>
-      <a href="/html/link-tree.html">
-        <li>Link-Tree</li>
-      </a>
-    </ul>
-  </nav>
-
-  <div class="section" id="mal2go-section">
+  <div class="section" id="section-2">
   </div>
 </body>
 </html>
