added copyright notice and blog, links page

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="Vidhu Kant Sharma's personal home page" />
-  <link type="text/css" rel="stylesheet" href="/public/css/font-faces.css">
-  <link type="text/css" rel="stylesheet" href="/public/css/styles.css">
-  <link type="text/css" rel="stylesheet" href="/public/css/index.css">
+  <meta name="description" content="Vidhu Kant Sharma's personal, minimal website" />
+  <link type="text/css" rel="stylesheet" href="/public/css/font-faces.css" />
+  <link type="text/css" rel="stylesheet" href="/public/css/index.css" />
+  <link type="text/css" rel="stylesheet" href="/public/css/styles.css" />
   <title>
-    VidhuKant's Homepage
+    Vidhu Kant Sharma's Website
   </title>
 </head>
 <body>
@@ -16,16 +16,22 @@
   <div class="section" id="section-1">
     <div class="section-child">
       <div id="image-and-links">
-        <img id="my-image" src="/public/pictures/vidhukant.jpg">
+        <img id="my-image" src="/public/pictures/vidhukant.jpg" alt="Vidhu Kant's Image">
         <ul id="my-links">
-          <a href="https://blog.vidhukant.xyz">
+          <a href="/projects">
+            <li>Projects</li>
+          </a>
+          <a href="/blog">
             <li>Blog</li>
           </a>
-          <a href="https://github.com/MikunoNaka">
-            <li>GitHub</li>
+          <a href="/links">
+            <li>Links</li>
           </a>
           <a href="https://www.youtube.com/channel/UClA8PwtqRvBVkLI8xrdumxQ">
             <li>YouTube</li>
+          </a>
+          <a href="https://github.com/MikunoNaka">
+            <li>GitHub</li>
           </a>
           <a href="mailto:vidhukant@vidhukant.xyz">
             <li>Email Me</li>
@@ -70,6 +76,24 @@
   </div>
 
   <div class="section" id="section-2">
+    <br/>
+    <h3 align="center">--this section isn't complete--</h3>
   </div>
+
+<!-- BEGIN_FOOTER -->
+  <footer>
+    <span id="copyright">
+      <p>
+        vidhukant.xyz Copyright &copy; 2022 Vidhu Kant Sharma
+        &lt;<a href="mailto:vidhukant@vidhukant.xyz">vidhukant@vidhukant.xyz</a>&gt;
+      </p>
+      <p>
+        This website is licenced under the GNU GPLv3 license.
+        The source code for this website can be found
+        <a href="https://github.com/MikunoNaka/vidhukant.xyz">here</a>.
+      </p>
+    </span>
+  </footer>
+<!-- END_FOOTER -->
 </body>
 </html>
