--- a/src/links/index.html
+++ b/src/links/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="MAL2Go - MyAnimeList API Wrapper for GoLang | VidhuKant's Projects" />
+  <meta name="description" content="VidhuKant's Useful Links" />
   <link type="text/css" rel="stylesheet" href="/public/css/font-faces.css" />
   <link type="text/css" rel="stylesheet" href="/public/css/projects/styles.css" />
   <title>
-    MAL2Go - MyAnimeList API wrapper for Go | Vidhu Kant's Projects
+    Vidhu Kant Sharma's Link-tree
   </title>
 </head>
 <body>
@@ -16,18 +16,18 @@
     <nav>
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/links">Links</a></li>
-        <li><a href="/projects" class="selected">Projects</a></li>
+        <li><a href="/links" class="selected">Links</a></li>
+        <li><a href="/projects">Projects</a></li>
         <li><a href="/blog">Blog</a></li>
       </ul>
     </nav>
   </header>
 <!-- END_HEADER -->
 
-  <h1 class="centered-text">MAL2Go - MyAnimeList V2 API wrapper for GoLang</h1>
-  <p class="centered-text">
-    TO BE UPDATED
-  </p>
+  <h1>VidhuKant's Links</h1>
+  <a href="https://www.youtube.com/channel/UClA8PwtqRvBVkLI8xrdumxQ">YouTube Channel</a>
+
+  <p class="centered">-- TO BE UPDATED --</p>
 
 <!-- BEGIN_FOOTER -->
   <footer>
