--- a/src/projects/index.html
+++ b/src/projects/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="MAL2Go - MyAnimeList API Wrapper for GoLang | VidhuKant's Projects" />
+  <meta name="description" content="VidhuKant's Projects" />
   <link type="text/css" rel="stylesheet" href="/public/css/font-faces.css" />
   <link type="text/css" rel="stylesheet" href="/public/css/projects/styles.css" />
   <title>
-    MAL2Go - MyAnimeList API wrapper for Go | Vidhu Kant's Projects
+    Vidhu Kant Sharma's Projects
   </title>
 </head>
 <body>
@@ -24,10 +24,21 @@
   </header>
 <!-- END_HEADER -->
 
-  <h1 class="centered-text">MAL2Go - MyAnimeList V2 API wrapper for GoLang</h1>
-  <p class="centered-text">
-    TO BE UPDATED
-  </p>
+  <h1>VidhuKant's Projects</h1>
+
+  <h3>Programs/Scripts</h3>
+  <ul class="colored-list">
+    <li>
+      <p>
+        <a href="/projects/macli">macli</a> - Unofficial CLI-Based MyAnimeList Client
+      </p>
+    </li>
+    <li>
+      <p>
+        <a href="/projects/MAL2Go">MAL2Go</a> - GoLang API Wrapper for MyAnimeList's Official V2 API
+      </p>
+    </li>
+  </ul>
 
 <!-- BEGIN_FOOTER -->
   <footer>
