--- a/src/projects/macli/index.html
+++ b/src/projects/macli/index.html
@@ -3,14 +3,27 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="macli - unofficial MyAnimeList client for the command-line" />
-  <link type="text/css" rel="stylesheet" href="/public/css/font-faces.css">
-  <link type="text/css" rel="stylesheet" href="/public/css/projects/styles.css">
+  <meta name="description" content="macli - unofficial MyAnimeList client for the command-line | VidhuKant's Projects" />
+  <link type="text/css" rel="stylesheet" href="/public/css/font-faces.css" />
+  <link type="text/css" rel="stylesheet" href="/public/css/projects/styles.css" />
   <title>
     macli - Unofficial MyAnimeList Client | Vidhu Kant's Projects
   </title>
 </head>
 <body>
+<!-- BEGIN_HEADER -->
+  <header>
+    <nav>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/links">Links</a></li>
+        <li><a href="/projects" class="selected">Projects</a></li>
+        <li><a href="/blog">Blog</a></li>
+      </ul>
+    </nav>
+  </header>
+<!-- END_HEADER -->
+
   <h1 class="centered-text">macli - Unofficial CLI-Based MyAnimeList Client</h1>
   <p class="centered-text">
     macli is an unofficial MyAnimeClient written in Go.<br/>
@@ -68,4 +81,20 @@
       <code>macli search </code>
     </li>
   </ul>
+
+<!-- BEGIN_FOOTER -->
+  <footer>
+    <span id="copyright">
+      <p>
+        vidhukant.xyz Copyright &copy; 2022 Vidhu Kant Sharma
+        &lt;<a href="mailto:vidhukant@vidhukant.xyz">vidhukant@vidhukant.xyz</a>&gt;
+      </p>
+      <p>
+        This website is licenced under the GNU GPLv3 license.
+        The source code for this website can be found
+        <a href="https://github.com/MikunoNaka/vidhukant.xyz">here</a>.
+      </p>
+    </span>
+  </footer>
+<!-- END_FOOTER -->
 </body>
