added some links

--- a/src/index.html
+++ b/src/index.html
@@ -75,10 +75,10 @@
     </div>
   </div>
 
-  <div class="section" id="section-2">
-    <br/>
-    <h3 align="center">--this section isn't complete--</h3>
-  </div>
+  <!-- <div class="section" id="section-2"> -->
+  <!--   <br/> -->
+  <!--   <h3 align="center">--this section isn't complete--</h3> -->
+  <!-- </div> -->
 
 <!-- BEGIN_FOOTER -->
   <footer>
