--- a/src/links/index.html
+++ b/src/links/index.html
@@ -25,9 +25,57 @@
 <!-- END_HEADER -->
 
   <h1>VidhuKant's Links</h1>
-  <a href="https://www.youtube.com/channel/UClA8PwtqRvBVkLI8xrdumxQ">YouTube Channel</a>
+  <p>All of the useful links redirecting to my other websites, other websites with me, contact info, etc. --incomplete as of now--</p>
+  <p>Links may or may not be sorted by priority</p>
 
-  <p class="centered">-- TO BE UPDATED --</p>
+  <ul>
+    <li>
+      <p>GitHub: <a href="https://www.github.com/MikunoNaka">MikunoNaka</a></p>
+    </li>
+    <li>
+      <p>Odysee: <a href="https://odysee.com/@MikunoNaka:dc5fa52a07d2e684ecd86d08482ef630a959f7a0">MikunoNaka</a></p>
+    </li>
+    <li>
+      <p>YouTube: <a href="https://www.youtube.com/channel/UClA8PwtqRvBVkLI8xrdumxQ">MikunoNaka</a></p>
+    </li>
+    <li>
+      <p>Twitch: (idk if I'd ever use it) <a href="https://www.twitch.tv/mikunonaka">MikunoNaka</a></p>
+    </li>
+    <li>
+      <p>Patreon: <a href="https://www.patreon.com/MikunoNaka">MikunoNaka</a></p>
+    </li>
+    <li>
+      <p>Public Email (non-youtube related?): <a href="mailto:vidhukant@vidhukant.xyz">vidhukant@vidhukant.xyz</a></p>
+    </li>
+    <li>
+      <p>Public Email (youtube-related, etc): <a href="mailto:miku@mikunonaka.net">miku@mikunonaka.net</a></p>
+    </li>
+  </ul>
+
+  <h4>Coming Soon: </h4>
+  <p>This is basically a To-Do list for me</p>
+  <ul>
+    <li>
+      <p>Blog RSS Feed</p>
+    </li>
+    <li>
+      <p>Projects RSS Feed (why not?)</p>
+    </li>
+    <li>
+      <p>Weeb Developerz website</p>
+    </li>
+    <li>
+      <p>Notable projects</p>
+    </li>
+    <li>
+      <p>some other of my own websites</p>
+    </li>
+    <li>
+      <p>mastodon (if i ever start)</p>
+    </li>
+  </ul>
+
+  <a href="https://www.youtube.com/channel/UClA8PwtqRvBVkLI8xrdumxQ">YouTube Channel</a>
 
 <!-- BEGIN_FOOTER -->
   <footer>
