added macli info and instructions

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
             <li>Blog</li>
           </a>
           <a href="/links">
-            <li>Links</li>
+            <li>Other Links</li>
           </a>
           <a href="https://www.youtube.com/channel/UClA8PwtqRvBVkLI8xrdumxQ">
             <li>YouTube</li>
@@ -66,8 +66,6 @@
             Apart from programming, I pick up new interests way too quickly and drop them at the same speed, but there's
             still a long list of my hobbies that stick around. I hope I'd be able to talk about all of them on this website.<br/>
 
-            Visit my personal blog at <a href="https://blog.vidhukant.xyz">blog.vidhukant.xyz</a>!!
-            I'm <em>writing my blog</em> so it's still under development, but still stable enough for you to read it!
           </p>
         </div>
       </div>
