added --id flag info in macli

--- a/src/projects/macli/index.html
+++ b/src/projects/macli/index.html
@@ -101,6 +101,14 @@
         <li id="flag_set-value">
           <p><code>--set-value</code>/<code>-s</code> flag can be used to specify a value to be set.</p>
         </li>
+        <li id="flag_id">
+          <p>
+            <code>--id</code>/<code>-i</code> flag can be used to specify an anime/manga's ID.
+            This overrides search and directly does the action with the specified anime/manga.
+            This is very useful when paired up with the <code>--set-value</code> flag, then
+            macli would require no terminal interaction and can be integrated into scripts, etc.
+          </p>
+        </li>
         <li>
           <p>Run <code>macli --help</code> or <code>macli [command] --help</code> for more info.</p>
         </li>
@@ -131,6 +139,7 @@
             <code><a href="#flag_search-length">--search-length</a></code>
             <code><a href="#flag_search-nsfw">--search-nsfw</a></code>
             <code><a href="#flag_search-offset">--search-offset</a></code>
+            <code><a href="#flag_id">--id</a></code>
           </p>
         </li>
       </ul>
@@ -158,6 +167,7 @@
             <code><a href="#flag_search-nsfw">--search-nsfw</a></code>
             <code><a href="#flag_search-offset">--search-offset</a></code>
             <code><a href="#flag_set-value">--set-value</a></code>
+            <code><a href="#flag_id">--id</a></code>
           </p>
         </li>
       </ul>
@@ -184,6 +194,7 @@
             <code><a href="#flag_search-nsfw">--search-nsfw</a></code>
             <code><a href="#flag_search-offset">--search-offset</a></code>
             <code><a href="#flag_set-value">--set-value</a></code>
+            <code><a href="#flag_id">--id</a></code>
           </p>
         </li>
       </ul>
@@ -211,6 +222,7 @@
             <code><a href="#flag_search-nsfw">--search-nsfw</a></code>
             <code><a href="#flag_search-offset">--search-offset</a></code>
             <code><a href="#flag_set-value">--set-value</a></code>
+            <code><a href="#flag_id">--id</a></code>
           </p>
         </li>
       </ul>
